# Meridian

./: CMakeLists.txt  README.md  TODO.txt  package-lock.json  package.json
backend/: CMakeLists.txt
backend/docs/: formulas.tex  monte_carlo_improvements.md  monte_carlo_math.md
backend/src/: main.cpp
backend/src/api/: server.h
backend/src/computing/: asset_computing.h  backtesting.cpp  backtesting.h  monte_carlo_engine.cpp  monte_carlo_engine.h
backend/src/data/: MarketDataFetcher.h
backend/src/models/: assets.h  coins.h
docs/: curl_tests.md
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AssetCard.vue  BackArrow.vue  BacktestChart.vue  Histogram.vue  InfoCard.vue  NavBar.vue  PieChart.vue  SearchBar.vue  TickerBand.vue  TooltipComp.vue  UnitToggle.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  utils.js
frontend/src/stores/: counter.js  sim_config.js
frontend/src/views/: AssetExplorer.vue  Backtest.vue  MyPortfolio.vue  SimulationView.vue
src/: App.vue  main.cpp
src/api/: server.h
src/assets/: main.css
src/components/: DataTable.vue  Histogram.vue  InfoCard.vue  NavBar.vue  PieChart.vue  PriceChart.vue
src/computing/: asset_computing.h  monte_carlo_engine.h
src/data/: MarketDataFetcher.h
src/models/: api_req.txt  assets.h  coins.h  currency.h
src/router/: index.js
src/services/: api.js  utils.js
src/stores/: counter.js
src/views/: AssetExplorer.vue  MyPortfolio.vue  SimulationView.vue
